# MOP-generator

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  ui.py
src/mop_generator/: __init__.py  cli.py  collector.py  config.py  core.py  git_utils.py  llm.py  models.py  project_context.py  ui.py
src/mop_generator/generators/: __init__.py  docx_gen.py  markdown.py
tests/: conftest.py  test_no_llm.py  test_with_llm.py
